--- a/index.html
+++ b/index.html
@@ -19,8 +19,15 @@
       background: url(img/NYC_night.jpg);
       background-size: cover;
       background-position: center;
-      min-height: 1000px;
+      min-height: 800px;
       /* opacity: 0.6; */
+    }
+
+    .nav-wrapper {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 2
     }
 
     .sidenav {
@@ -83,7 +90,7 @@
         </a>
         <ul class="right hide-on-med-and-down">
           <li><a href="#portfolios" class='indigo-text'>Portfolios</a></li>
-          <li><a href="#services" class='indigo-text'>Skills</a></li>
+          <li><a href="#skills" class='indigo-text'>Skills</a></li>
           <li><a href="#aboutme" class='indigo-text'>About me</a></li>
           <li><a href="https://www.linkedin.com/in/followingdreams/" class="tooltipped btn-floating btn-small indigo darken-4" data-position="bottom"
               data-tooltip="LinkedIn">
@@ -100,7 +107,7 @@
         </ul>
         <ul class="sidenav grey lighten-4" id="mobile-menu">
           <li><a href="#portfolios" class='indigo-text'>Portfolios</a></li>
-          <li><a href="#services" class='indigo-text'>Skills</a></li>
+          <li><a href="#skills" class='indigo-text'>Skills</a></li>
           <li><a href="#aboutme" class='indigo-text'>About me</a></li>
         </ul>
       </div>
@@ -161,15 +168,14 @@
     </div>
   </div>
 
-  <!-- services / tabs -->
-  <section class="section container scrollspy" id="services">
+  <!-- skills / tabs -->
+  <section class="section container scrollspy" id="skills">
     <div class="row">
       <div class="col s12 l4">
         <h2 class="indigo-text text-darken-4">Skills</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec,
           tincidunt orci.</p>
-        <p>Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae
-          scelerisque erat ornare nec.</p>
+     
       </div>
       <div class="col s12 l6 offset-l2">
         <!-- tabs -->
@@ -183,10 +189,10 @@
         </ul>
         <div id="photography" class="col s12">
           <p class="flow-text indigo-text text-darken-4">Web Developing</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec,
-            tincidunt orci.</p>
-          <p>Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae
-            scelerisque erat ornare nec.</p>
+          <p>It was five years ago that I started to build my first website with existing framework and basic HTML and CSS. The most exciting part for that website was Google Analytics and AdWords. I imbeded the Google APIs and kept optimizing the site each week based on the data and reports.</p>
+          <p>Gained hands-on experience with JavaScript, HTML, CSS, Node, Express, React/Redux, PostgreSQL, APIs, Git/Github, Data
+          Structures, Algorithms, and tech principles and culture via both team/individual projects, code reviews, and pair
+          programming</p>
         </div>
         <div id="editing" class="col s12">
           <p class="flow-text indigo-text text-darken-4">Data Analysis</p>
@@ -210,15 +216,14 @@
   <!-- contact form -->
   <section class="section container scrollspy" id="aboutme">
     <div class="row">
-      <div class="col s12 l5">
+      <div class="col s12 l12">
         <h3 class="indigo-text text-darken-4">About Me</h3>
+        <p>I’m writing to express my interest in the Web Developer or Data Analyst position open in your company. I believe the broad range of technologies and the rich experience in business that I learned will give me lots of potential to contribute to the team.</p>
         <p>I started my career in China as a mechanical engineer in the auto industry. After I graduated from my MBA program in
           Chicago, I founded a startup to help international visitors find drivers who speak their native language, all from a
           mobile app. In those days, I worked closely with UI/UX designers and developers and learned enough from them to
-          develop
-          my company’s website by myself. The more I learn, the more I am excited to be a developer..</p>
-        <p>Thanks Pursuit for the 10-month program. Now I'm a passinate web developer. I look forward to helping you build your
-          dream apps!</p>
+          develop my company’s website by myself. The more I learn, the more I am excited to be a developer.</p>
+        <p>Thanks for your time and I look forward to helping you build your dream apps!</p>
       </div>
      
     </div>
