--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
               data-tooltip="Github">
               <i class="fab fa-github"></i>
             </a></li>
-          <li><a href="https://twitter.com/dzpvr0" class="tooltipped btn-floating btn-small indigo darken-4" data-position="bottom"
+          <!-- <li><a href="https://twitter.com/dzpvr0" class="tooltipped btn-floating btn-small indigo darken-4" data-position="bottom"
               data-tooltip="Twitter">
               <i class="fab fa-twitter"></i>
-            </a></li>
+            </a></li> -->
         </ul>
         <ul class="sidenav grey lighten-4" id="mobile-menu">
           <li><a href="#portfolios" class='indigo-text'>Portfolios</a></li>
@@ -172,10 +172,17 @@
   <section class="section container scrollspy" id="skills">
     <div class="row">
       <div class="col s12 l4">
-        <h2 class="indigo-text text-darken-4">Skills</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec,
-          tincidunt orci.</p>
-     
+        <h3 class="indigo-text text-darken-4">Skills</h3>
+        <h6>Full-Stack Web Development</h6>
+        <h6>Git & GitHub</h6>
+        <h6>HTML/CSS</h6>
+        <h6>JavaScript</h6>
+        <h6>Node.js</h6>
+        <h6>Phython</h6>
+        <h6>HTTP & REST</h6>
+        <h6>Problem Solving</h6>
+        <h6>Program Management</h6>
+        <h6>Critical Thinking</h6>
       </div>
       <div class="col s12 l6 offset-l2">
         <!-- tabs -->
@@ -196,10 +203,12 @@
         </div>
         <div id="editing" class="col s12">
           <p class="flow-text indigo-text text-darken-4">Data Analysis</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec,
-            tincidunt orci.</p>
-          <p>Mauris dolor augue, vulputate in pharetra ac, facilisis nec libero. Fusce condimentum gravida urna, vitae
-            scelerisque erat ornare nec.</p>
+          <p>I am a details-orirented person. The big data has a maigic for me. The more I learn, the more I know how important for a business to use data analytical techniques to keep optimizing their
+          products/services. Nowadays Big data is the key for understanding clients to initiate continuous improvements. So I started to learn data science courses on Udacity since then.
+          </p>
+          <p>Over the past seven months, I’ve been training to be a Full Stack Developer at pursuit. In the meantime, I didn't stop
+          my self-learning on other platforms, such as Codecademy and Kaggle, which gave me a deep understanding in data science field.
+          .</p>
         </div>
       </div>
     </div>
@@ -218,9 +227,9 @@
     <div class="row">
       <div class="col s12 l12">
         <h3 class="indigo-text text-darken-4">About Me</h3>
-        <p>I’m writing to express my interest in the Web Developer or Data Analyst position open in your company. I believe the broad range of technologies and the rich experience in business that I learned will give me lots of potential to contribute to the team.</p>
+        <p>I’m writing to express my interest in the Web Developer or Data Analyst positions. I believe the broad range of technologies and rich experiences in business that I learned will give me lots of potential to contribute to the team.</p>
         <p>I started my career in China as a mechanical engineer in the auto industry. After I graduated from my MBA program in
-          Chicago, I founded a startup to help international visitors find drivers who speak their native language, all from a
+          Chicago, I founded a startup to help international visitors find drivers who speak their native languages, all from a
           mobile app. In those days, I worked closely with UI/UX designers and developers and learned enough from them to
           develop my company’s website by myself. The more I learn, the more I am excited to be a developer.</p>
         <p>Thanks for your time and I look forward to helping you build your dream apps!</p>
