--- a/index.html
+++ b/index.html
@@ -175,14 +175,15 @@
         <h3 class="indigo-text text-darken-4">Skills</h3>
         <h6>Full-Stack Web Development</h6>
         <h6>Git & GitHub</h6>
-        <h6>HTML/CSS</h6>
-        <h6>JavaScript</h6>
+        <h6>HTML5/CSS3</h6>
+        <h6>JavaScript ES5/ES6 and above</h6>
+        <h6>React</h6>
+        <h6>Redux</h6>
+        <h6>Express.js</h6>
+        <h6>PostgreSQL</h6>
         <h6>Node.js</h6>
-        <h6>Phython</h6>
-        <h6>HTTP & REST</h6>
-        <h6>Problem Solving</h6>
-        <h6>Program Management</h6>
-        <h6>Critical Thinking</h6>
+        <h6>Python</h6>
+        <h6>HTTP and RESTful APIs</h6>
       </div>
       <div class="col s12 l6 offset-l2">
         <!-- tabs -->
@@ -196,18 +197,16 @@
         </ul>
         <div id="photography" class="col s12">
           <p class="flow-text indigo-text text-darken-4">Web Developing</p>
-          <p>It was five years ago that I started to build my first website with existing framework and basic HTML and CSS. The most exciting part for that website was Google Analytics and AdWords. I imbeded the Google APIs and kept optimizing the site each week based on the data and reports.</p>
+          <p>It was five years ago that I started to build my first website with existing framework, basic HTML, and CSS. The most exciting part for that website was Google Analytics and Google AdWords. I embeded the Google APIs and kept optimizing the site each week based on the data and reports.</p>
           <p>Gained hands-on experience with JavaScript, HTML, CSS, Node, Express, React/Redux, PostgreSQL, APIs, Git/Github, Data
-          Structures, Algorithms, and tech principles and culture via both team/individual projects, code reviews, and pair
+          Structures, Algorithms, tech principles, and culture via both team/individual projects, code reviews, and pair
           programming</p>
         </div>
         <div id="editing" class="col s12">
           <p class="flow-text indigo-text text-darken-4">Data Analysis</p>
-          <p>I am a details-orirented person. The big data has a maigic for me. The more I learn, the more I know how important for a business to use data analytical techniques to keep optimizing their
-          products/services. Nowadays Big data is the key for understanding clients to initiate continuous improvements. So I started to learn data science courses on Udacity since then.
+          <p>I am a detail-oriented person. The big data has a maigic for me. The more I learn, the more I know how important for a business to use data analytical techniques to keep optimizing their products/services. Nowadays, Big Data is the key for understanding clients to initiate continuous improvements. Because of this, I started to take data science courses on Udacity.
           </p>
-          <p>Over the past seven months, I’ve been training to be a Full Stack Developer at pursuit. In the meantime, I didn't stop
-          my self-learning on other platforms, such as Codecademy and Kaggle, which gave me a deep understanding in data science field.
+          <p>Over the past eight months I’ve been training to be a Full Stack Developer at Pursuit. In the meantime I didn't stop my self-learning, which gave me a deep understanding in data science field.
           .</p>
         </div>
       </div>
