combine React and Redux in one line

--- a/index.html
+++ b/index.html
@@ -177,8 +177,7 @@
         <h6>Git & GitHub</h6>
         <h6>HTML5/CSS3</h6>
         <h6>JavaScript ES5/ES6 and above</h6>
-        <h6>React</h6>
-        <h6>Redux</h6>
+        <h6>React/Redux</h6>
         <h6>Express.js</h6>
         <h6>PostgreSQL</h6>
         <h6>Node.js</h6>
