add one more line for aboutme

--- a/index.html
+++ b/index.html
@@ -225,12 +225,18 @@
     <div class="row">
       <div class="col s12 l12">
         <h3 class="indigo-text text-darken-4">About Me</h3>
-        <p>I’m writing to express my interest in the Web Developer or Data Analyst positions. I believe the broad range of technologies and rich experiences in business that I learned will give me lots of potential to contribute to the team.</p>
         <p>I started my career in China as a mechanical engineer in the auto industry. After I graduated from my MBA program in
           Chicago, I founded a startup to help international visitors find drivers who speak their native languages, all from a
           mobile app. In those days, I worked closely with UI/UX designers and developers and learned enough from them to
           develop my company’s website by myself. The more I learn, the more I am excited to be a developer.</p>
-        <p>Thanks for your time and I look forward to helping you build your dream apps!</p>
+        <p>Over the past eight months I’ve been training to be a Full Stack Developer at Pursuit where I’ve developed apps using
+        JavaScript, React, Redux, HTML5, CSS3, Express, and PostgreSQL. Currently I’m working on a team of four creating a
+        website addressing environmental issues in New York City through an interactive, visual platform. Through this team
+        project, I’ve had the chance to apply my creative thinking and problem-solving skills alongside other colleagues. By
+        leveraging strong communication, organization and team-based problem solving skills, we’ve been able to create a
+        thorough MVP in less than three weeks.
+        </p>
+        <p>Thanks for your time and I look forward to working with you!</p>
       </div>
      
     </div>
