add target attribute to a tag

--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
         <img src="img/EnvizoLogo2.svg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l7 offset-l1">
-        <h3 class="indigo-text text-darken-4">Envizo</h3>
+        <h3 class="indigo-text text-darken-4">
+          <a href="https://envizo.herokuapp.com/" target="_blank">Envizo</a>
+        </h3>
         <h5>An app to address Environmental issues as a community in a visual way. <br/><br/>Environmental + Visualization = Envizo.</h5>
         <h5>Tech Stack:</h5>
           <h6>Frontend: React + Redux</h6>
