add more target attribute to a tags

--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
           <li><a href="#skills" class='indigo-text'>Skills</a></li>
           <li><a href="#aboutme" class='indigo-text'>About me</a></li>
           <li><a href="https://www.linkedin.com/in/followingdreams/" class="tooltipped btn-floating btn-small indigo darken-4" data-position="bottom"
-              data-tooltip="LinkedIn">
+              data-tooltip="LinkedIn" target='_blank'>
               <i class="fab fa-linkedin"></i>
             </a></li>
           <li><a href="https://github.com/Godsby" class="tooltipped btn-floating btn-small indigo darken-4" data-position="bottom"
-              data-tooltip="Github">
+              data-tooltip="Github" target='_blank'>
               <i class="fab fa-github"></i>
             </a></li>
           <!-- <li><a href="https://twitter.com/dzpvr0" class="tooltipped btn-floating btn-small indigo darken-4" data-position="bottom"
@@ -261,11 +261,11 @@
           <div class="col s12 l5 offset-l2">
             <div class="social">
               <i class="fab fa-linkedin small"></i>
-              <a class="center" href="https://www.linkedin.com/in/followingdreams/">LinkedIn</a>
+              <a class="center" href="https://www.linkedin.com/in/followingdreams/" target='_blank'>LinkedIn</a>
             </div>
             <div class="social">
               <i class="fab fa-github small"></i>
-              <a class="center" href="https://github.com/Godsby">Github</a>
+              <a class="center" href="https://github.com/Godsby" target='_blank'>Github</a>
             </div>
           </div>
         </div>
