add clickable email address

--- a/index.html
+++ b/index.html
@@ -252,7 +252,8 @@
           <h3>Get in Touch</h3>
           <div class="col s12 l5">
             <div class="contact">
-              <i class="material-icons small">contact_mail</i>huandan.lu@gmail.com
+              <i class="material-icons small">contact_mail</i>
+              <a href="mailto:huandan.lu@gmail.com">huandan.lu@gmail.com</a>
             </div>
             <div class="contact">
               <i class="material-icons small">contact_phone</i>(312) 493 - 9078
