--- a/index.html
+++ b/index.html
@@ -198,17 +198,15 @@
         </ul>
         <div id="photography" class="col s12">
           <p class="flow-text indigo-text text-darken-4">Web Developing</p>
-          <p>It was five years ago that I started to build my first website with existing framework, basic HTML, and CSS. The most exciting part for that website was Google Analytics and Google AdWords. I embeded the Google APIs and kept optimizing the site each week based on the data and reports.</p>
-          <p>Gained hands-on experience with JavaScript, HTML, CSS, Node, Express, React/Redux, PostgreSQL, APIs, Git/Github, Data
-          Structures, Algorithms, tech principles, and culture via both team/individual projects, code reviews, and pair
-          programming</p>
+          <p>It was five years ago that I started to build my first website with HTML, CSS and JavaScript. The most exciting part for that website was Google Analytics. I embeded the Google APIs and kept optimizing the site each week based on the data and reports.</p>
+          <p>Gained hands-on experience with JavaScript, HTML, CSS, Node, Express, React/Redux, PostgreSQL, APIs, Git/Github, Data Structures, Algorithms, tech principles, and culture via both team/individual projects, code reviews, and pair programming.</p>
         </div>
         <div id="editing" class="col s12">
           <p class="flow-text indigo-text text-darken-4">Data Analysis</p>
-          <p>I am a detail-oriented person. The big data has a maigic for me. The more I learn, the more I know how important for a business to use data analytical techniques to keep optimizing their products/services. Nowadays, Big Data is the key for understanding clients to initiate continuous improvements. Because of this, I started to take data science courses on Udacity.
+          <p>I am a detail-oriented person. The big data has a magic for me. The more I learn, the more I know how important for a business to use data analytical techniques to keep optimizing their products/services. Nowadays, Big Data is the key for understanding clients to initiate continuous improvements. Because of this, I started to take data science courses on Udacity.
           </p>
-          <p>Over the past eight months I’ve been training to be a Full Stack Developer at Pursuit. In the meantime I didn't stop my self-learning, which gave me a deep understanding in data science field.
-          .</p>
+          <p>Over the past nine months I’ve been training to be a Full Stack Developer at Pursuit. In the meantime I didn't stop my self-learning, which gave me a deep understanding in data science field.
+          </p>
         </div>
       </div>
     </div>
@@ -227,11 +225,8 @@
     <div class="row">
       <div class="col s12 l12">
         <h3 class="indigo-text text-darken-4">About Me</h3>
-        <p>I started my career in China as a mechanical engineer in the auto industry. After I graduated from my MBA program in
-          Chicago, I founded a startup to help international visitors find drivers who speak their native languages, all from a
-          mobile app. In those days, I worked closely with UI/UX designers and developers and learned enough from them to
-          develop my company’s website by myself. The more I learn, the more I am excited to be a developer.</p>
-        <p>Over the past eight months I’ve been training to be a Full Stack Developer at Pursuit where I’ve developed apps using
+        <p>I started my career in China as a mechanical engineer in the auto industry. After I got my MBA in Chicago, I founded a startup to help international visitors find drivers who speak their native languages, all from a mobile app. I recruited and managed a dynamic team of UI/UX designers and developers to create iOS apps from scratch and deploy them on the app store. As the project owner and Tech Lead, I worked closely with developers each day. Code reviews and testing were two major tech functionalities that I handled for more than 4 years. I was managing the project and learning how to code at the same time. Later on I developed and deployed the company’s website all by myself. The more I learn, the more I am excited to be a software engineer.</p>
+        <p>Over the past nine months I’ve been training to be a Full Stack Developer at Pursuit where I’ve developed apps using
         JavaScript, React, Redux, HTML5, CSS3, Express, and PostgreSQL. Currently I’m working on a team of four creating a
         website addressing environmental issues in New York City through an interactive, visual platform. Through this team
         project, I’ve had the chance to apply my creative thinking and problem-solving skills alongside other colleagues. By
