font size adjusted

--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
         <img src="img/EnvizoLogo2.svg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l7 offset-l1">
-        <h3 class="indigo-text text-darken-4">
+        <h4 class="indigo-text text-darken-4">
           <a href="https://envizo.herokuapp.com/" target="_blank">Envizo</a>
-        </h3>
-        <h5>An app to address Environmental issues as a community in a visual way. <br/><br/>Environmental + Visualization = Envizo.</h5>
-        <h5>Tech Stack:</h5>
+        </h4>
+        <h6>An app to address Environmental issues as a community in a visual way. <br/><br/>Environmental + Visualization = Envizo.</h6>
+        <h6><u><i>Tech Stack</i></u></h6>
           <h6>Frontend: React + Redux</h6>
           <h6>Backend: PostgreSQL + Express</h6>
           <h6>Main Library: D3.js</h6>
@@ -137,11 +137,9 @@
         <img src="img/relieve_logo.png" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1 pull-l5 left-align">
-        <h3 class="indigo-text text-darken-4">RelieveMe</h3>
-        <h5>An app for taxi drivers who are on the go who need to “go”! This app was designed to locate the all Taxi Relief stands
-        around your current location or you can find one in any borough you choose! Once you find a parking space, drivers are
-        able to stay in that space for up to 1-hour to take a nap, run an errand or “go”!</h5>
-        <h5>Tech Stack:</h5>
+        <h4 class="indigo-text text-darken-4">RelieveMe</h4>
+        <h6>An app for Uber drivers who are on the go who need to “go”! <br/><br/>This app was designed to locate all the Taxi Relief stands around your current location or you can find one in any borough you choose!</h6>
+        <h6><u><i>Tech Stack</i></u></h6>
         <h6>Frontend: React</h6>
         <h6>Backend: PostgreSQL + Express</h6>
         <h6>Main Library: react-geocode </h6>
@@ -153,9 +151,9 @@
         <img src="img/Unote-logo.png" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1">
-        <h3 class="indigo-text text-darken-4">Unote</h3>
-        <h5>An app that imitates Evernote.</h5>
-        <h5>Tech Stack:</h5>
+        <h4 class="indigo-text text-darken-4">Unote</h4>
+        <h6>An Evernote inspired Full Stack web application.</h6>
+        <h6><u><i>Tech Stack</i></u></h6>
         <h6>Frontend: React + Redux</h6>
         <h6>Backend: PostgreSQL + Express</h6>
         <h6>Main Library: Quill.js and materializecss </h6>
