add two projects

--- a/index.html
+++ b/index.html
@@ -121,42 +121,76 @@
         <img src="img/EnvizoLogo2.svg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l7 offset-l1">
-        <h4 class="indigo-text text-darken-4">
-          <a href="https://envizo.herokuapp.com/" target="_blank">Envizo</a>
+        <h4>
+          <a href="https://envizo.herokuapp.com/" target="_blank" class='indigo-text'>Envizo</a>
         </h4>
         <h6>An app to address Environmental issues as a community in a visual way. <br/><br/>Environmental + Visualization = Envizo.</h6>
         <h6><u><i>Tech Stack</i></u></h6>
           <h6>Frontend: React + Redux</h6>
           <h6>Backend: PostgreSQL + Express</h6>
           <h6>Main Library: D3.js</h6>
-          <h6>Source of APIs: NYC Open Data</h6>
+          <h6>APIs: NYC Open Data</h6>
       </div>
-    </div><hr/>
+    </div><br/><hr/><br/>
     <div class="row">
       <div class="col s12 l4 offset-l1 push-l7">
         <img src="img/relieve_logo.png" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1 pull-l5 left-align">
-        <h4 class="indigo-text text-darken-4">RelieveMe</h4>
+        <h4>
+          <a href="https://" target="_blank" class="indigo-text">RelieveMe</a>
+        </h4>
         <h6>An app for Uber drivers who are on the go who need to “go”! <br/><br/>This app was designed to locate all the Taxi Relief stands around your current location or you can find one in any borough you choose!</h6>
         <h6><u><i>Tech Stack</i></u></h6>
         <h6>Frontend: React</h6>
         <h6>Backend: PostgreSQL + Express</h6>
         <h6>Main Library: react-geocode </h6>
-        <h6>Source of APIs: Google Maps JavaScript API</h6>
+        <h6>APIs: Google Maps JavaScript API</h6>
       </div>
-    </div><hr/><br/>
+    </div><br/><hr/><br/>
     <div class="row">
       <div class="col s12 l4">
         <img src="img/Unote-logo.png" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1">
-        <h4 class="indigo-text text-darken-4">Unote</h4>
+        <h4>
+          <a href="https://" target="_blank" class="indigo-text">Unote</a>
+        </h4>
         <h6>An Evernote inspired Full Stack web application.</h6>
         <h6><u><i>Tech Stack</i></u></h6>
         <h6>Frontend: React + Redux</h6>
         <h6>Backend: PostgreSQL + Express</h6>
         <h6>Main Library: Quill.js and materializecss </h6>
+      </div>
+    </div><br/><hr/><br/>
+      <div class="row">
+      <div class="col s12 l4 offset-l1 push-l7">
+        <img src="img/Paxi Logo copy.png" alt="" width='150' class="responsive-img materialboxed">
+      </div>
+      <div class="col s12 l6 offset-l1 pull-l5 left-align">
+        <h4>
+          <a href="https://www.paxi.us/" target="_blank" class="indigo-text">Paxi Web App</a>
+        </h4>
+        <h6>Paxi is a ride-sharing app connecting international travelers in the U.S. to native-speaking drivers.<br/><br/>Web platform is used to recruit interested drivers and provide more information about the company</h6>
+        <h6><u><i>Tech Stack</i></u></h6>
+        <h6>Frontend: JavaScript</h6>
+        <h6>Backend: PHP + MySQL</h6>
+        <h6>APIs: Google Analytics, Facebook APIs</h6>
+      </div>
+    </div><br/><hr/><br/>
+    <div class="row">
+      <div class="col s12 l4">
+        <img src="img/Paxi Logo copy.png" alt="" width='150' class="responsive-img materialboxed">
+      </div>
+      <div class="col s12 l6 offset-l1">
+        <h4>
+          <a href="https://github.com/Godsby/Paxi" target="_blank" class="indigo-text">Paxi iOS App</a>
+        </h4>
+        <h6>Pairing international riders with native-speaking drivers to foster better first-time experiences in a new place.</h6>
+        <h6><u><i>Tech Stack</i></u></h6>
+        <h6>Frontend: Swift</h6>
+        <h6>Backend: PHP + MySQL</h6>
+        <h6>APIs: Google Maps, Twillos, SendGrid, Braintree </h6>
       </div>
     </div>
   </section>
@@ -172,11 +206,11 @@
   <section class="section container scrollspy" id="skills">
     <div class="row">
       <div class="col s12 l4">
-        <h3 class="indigo-text text-darken-4">Skills</h3>
+        <h4 class="indigo-text text-darken-4">Skills</h4>
         <h6>Full-Stack Web Development</h6>
         <h6>Git & GitHub</h6>
         <h6>HTML5/CSS3</h6>
-        <h6>JavaScript ES5/ES6 and above</h6>
+        <h6>JavaScript ES 5/6/7 </h6>
         <h6>React/Redux</h6>
         <h6>Express.js</h6>
         <h6>PostgreSQL</h6>
