add link for relieveme

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       </div>
       <div class="col s12 l6 offset-l1 pull-l5 left-align">
         <h4>
-          <a href="https://" target="_blank" class="indigo-text">RelieveMe</a>
+          <a href="https://warm-thicket-97189.herokuapp.com/" target="_blank" class="indigo-text">RelieveMe</a>
         </h4>
         <h6>An app for Uber drivers who are on the go who need to “go”! <br/><br/>This app was designed to locate all the Taxi Relief stands around your current location or you can find one in any borough you choose!</h6>
         <h6><u><i>Tech Stack</i></u></h6>
@@ -184,7 +184,7 @@
       </div>
       <div class="col s12 l6 offset-l1">
         <h4>
-          <a href="https://github.com/Godsby/Paxi" target="_blank" class="indigo-text">Paxi iOS App</a>
+          <a href="https://github.com/Godsby/Paxi" target="_blank" class="indigo-text">Paxi iOS Apps</a>
         </h4>
         <h6>Pairing international riders with native-speaking drivers to foster better first-time experiences in a new place.</h6>
         <h6><u><i>Tech Stack</i></u></h6>
